Add HTML Info & Structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,192 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <header>
+        <h1>Awesome Startup Employee Directory</h1>
+        <input type="search" id="search" name="search" placeholder="Enter a name or username"/>
+    </header>
+    <main>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+        <div class="employee-card">
+            <img src="member-1.jpg" alt="member headshot">
+            <h2>Alister Dangerfield</h2>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+        </div>
+        <div class="modal">
+            <img src="member-1.jpg" alt="member headshot">
+            <h3>Alister Dangerfield</h3>
+            <span>plittle@photolist.edu</span>
+            <span>Baltimore</span>
+            <span>(593) 364-3249</span>
+            <span>851 Scoville Plymouth, WV 84814</span>
+            <span>Birthday: 01/04/85</span>
+        </div>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
