Add HTML & CSS Structure

--- a/index.html
+++ b/index.html
@@ -15,182 +15,182 @@
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
         <div class="employee-card">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
+            <span class="employee-email">plittle@photolist.edu</span>
+            <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
-            <span>plittle@photolist.edu</span>
-            <span>Baltimore</span>
-            <span>(593) 364-3249</span>
-            <span>851 Scoville Plymouth, WV 84814</span>
-            <span>Birthday: 01/04/85</span>
+            <span class="modal-email">plittle@photolist.edu</span>
+            <span class="modal-city">Baltimore</span>
+            <span class="modal-number">(593) 364-3249</span>
+            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
+            <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
     </main>
     <script src="app.js"></script>
