Add Second Class to Divs

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <input type="search" id="search" name="search" placeholder="Enter a name or username"/>
     </header>
     <main>
-        <div class="employee-card">
+        <div class="employee-card employee-one">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-one">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -27,13 +27,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-two">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-two">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -42,13 +42,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-three">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-three">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -57,13 +57,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-four">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-four">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -72,13 +72,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-five">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-five">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -87,13 +87,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-six">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-six">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -102,13 +102,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-seven">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-seven">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -117,13 +117,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-eight">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-eight">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -132,13 +132,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-nine">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-nine">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -147,13 +147,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-ten">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-ten">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -162,13 +162,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-eleven">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-eleven">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -177,13 +177,13 @@
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
         </div>
-        <div class="employee-card">
+        <div class="employee-card employee-twelve">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal">
+        <div class="modal mod-twelve">
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
