--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-one">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -37,6 +38,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-two">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -52,6 +54,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-three">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -67,6 +70,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-four">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -82,6 +86,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-five">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -97,6 +102,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-six">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -112,6 +118,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-seven">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -127,6 +134,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-eight">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -142,6 +150,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-nine">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -157,6 +166,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-ten">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -172,6 +182,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-eleven">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -187,6 +198,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-twelve">
+            <button type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
