Adds popup styling & event listeners

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-one">
-            <button type="button">X</button>
+            <button id="button-one" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -38,7 +38,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-two">
-            <button type="button">X</button>
+            <button id="button-two" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -54,7 +54,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-three">
-            <button type="button">X</button>
+            <button id="button-three" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -70,7 +70,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-four">
-            <button type="button">X</button>
+            <button id="button-four" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -86,7 +86,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-five">
-            <button type="button">X</button>
+            <button id="button-five" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -102,7 +102,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-six">
-            <button type="button">X</button>
+            <button id="button-six" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -118,7 +118,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-seven">
-            <button type="button">X</button>
+            <button id="button-seven" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -134,7 +134,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-eight">
-            <button type="button">X</button>
+            <button id="button-eight" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -150,7 +150,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-nine">
-            <button type="button">X</button>
+            <button id="button-nine" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -166,7 +166,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-ten">
-            <button type="button">X</button>
+            <button id="button-ten" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -182,7 +182,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-eleven">
-            <button type="button">X</button>
+            <button id="button-eleven" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
@@ -198,7 +198,7 @@
             <span class="employee-city">Baltimore</span>
         </div>
         <div class="modal mod-twelve">
-            <button type="button">X</button>
+            <button id="button-twelve" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
             <h3>Alister Dangerfield</h3>
             <span class="modal-email">plittle@photolist.edu</span>
