--- a/index.html
+++ b/index.html
@@ -15,198 +15,88 @@
         <input type="search" id="search" name="search" placeholder="Enter a name or username"/>
     </header>
     <main>
-        <div class="employee-card employee-one">
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
             <h2>Alister Dangerfield</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-one">
-            <button id="button-one" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-two">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Joe Brannen</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-two">
-            <button id="button-two" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-three">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Adair</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-three">
-            <button id="button-three" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-four">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Dansby Dog</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-four">
-            <button id="button-four" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-five">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Rafael Furcal</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-five">
-            <button id="button-five" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-six">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Chipper Jones</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-six">
-            <button id="button-six" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-seven">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Muhammad Ali</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-seven">
-            <button id="button-seven" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-eight">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Matt Olson</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-eight">
-            <button id="button-eight" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-nine">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Sean Murphy</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-nine">
-            <button id="button-nine" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-ten">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Spencer Strider</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-ten">
-            <button id="button-ten" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-eleven">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Max Fried</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-eleven">
-            <button id="button-eleven" type="button">X</button>
+        <div class="employee">
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
-            <span class="modal-email">plittle@photolist.edu</span>
-            <span class="modal-city">Baltimore</span>
-            <span class="modal-number">(593) 364-3249</span>
-            <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
-            <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
-        <div class="employee-card employee-twelve">
-            <img src="member-1.jpg" alt="member headshot">
-            <h2>Alister Dangerfield</h2>
+            <h2>Freddie Freeman</h2>
             <span class="employee-email">plittle@photolist.edu</span>
             <span class="employee-city">Baltimore</span>
         </div>
-        <div class="modal mod-twelve">
-            <button id="button-twelve" type="button">X</button>
+        <div class="modal">
+            <button class="button" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
-            <h3>Alister Dangerfield</h3>
+            <h3>Shoehei Ohtani</h3>
             <span class="modal-email">plittle@photolist.edu</span>
             <span class="modal-city">Baltimore</span>
             <span class="modal-number">(593) 364-3249</span>
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
-        </div>
+        </div> 
     </main>
     <script src="app.js"></script>
 </body>
