--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="search" id="search" name="search" placeholder="Enter a name or username"/>
     </header>
     <main>
+        <div class="card"></div>
         <div class="modal">
             <button class="button" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
