--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </header>
     <main>
         <div class="card"></div>
+        <div class="container"></div>
+        <!-- 
         <div class="modal">
             <button class="button" type="button">X</button>
             <img src="member-1.jpg" alt="member headshot">
@@ -25,7 +27,8 @@
             <span class="modal-number">(593) 364-3249</span>
             <span class="modal-address">851 Scoville Plymouth, WV 84814</span>
             <span class="modal-bday">Birthday: 01/04/85</span>
-        </div> 
+        </div>
+        --> 
     </main>
     <script src="app.js"></script>
 </body>
